# opendosm-parquet-to-sqlite

./: .gitignore  Cargo.toml  README.md  pricecatcher.zip.z  script.sh
src/: main.rs
