[package]
name = "opendosm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.139"
parquet = "31.0.0"
sqlite = "0.30.3"
sqlite3-sys = "0.14.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
bytes = "1.3.0"
chrono = "0.4.23"
